// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginManagerControls should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
    data-testid="PluginManagerControls"
  >
    <div
      class="flex items-center space-x-1"
    >
      <div
        data-testid="LayoutControls__list"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 cWmnHb ring-focus"
            data-testid="LayoutControls__list--icon"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                list.svg
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="LayoutControls__grid"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 cWmnHb ring-focus active"
            data-testid="LayoutControls__grid--icon"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                grid.svg
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginManagerControls should toggle between list and grid 1`] = `
<DocumentFragment>
  <div>
    <span
      data-testid="viewType"
    >
      grid
    </span>
    <div
      class="flex items-center"
      data-testid="PluginManagerControls"
    >
      <div
        class="flex items-center space-x-1"
      >
        <div
          data-testid="LayoutControls__list"
        >
          <div
            class="group"
          >
            <button
              class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 cWmnHb ring-focus"
              data-testid="LayoutControls__list--icon"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  list.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          data-testid="LayoutControls__grid"
        >
          <div
            class="group"
          >
            <button
              class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 cWmnHb ring-focus active"
              data-testid="LayoutControls__grid--icon"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  grid.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
